<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/widget_config_content_container"
            android:paddingLeft="@dimen/single_view_side_margin"
            android:paddingRight="@dimen/single_view_side_margin"
            android:layout_marginLeft="@dimen/widget_config_horizontal_margin"
            android:layout_marginRight="@dimen/widget_config_horizontal_margin"
            android:paddingTop="@dimen/widget_config_content_top_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans"
                android:text="@string/widget_config_title"
                android:textColor="?attr/storyColorNormal"
                android:textSize="@dimen/widget_config_title_text_size"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/widget_config_feed_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widget_config_feed_top_margin">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/widget_config_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:fontFamily="@font/product_sans"
                    android:text="@string/widget_config_top_stories"
                    android:textColor="?attr/storyColorNormal"
                    android:textSize="@dimen/widget_config_feed_text_size"
                    android:checked="true" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/widget_config_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:fontFamily="@font/product_sans"
                    android:text="@string/widget_config_new_stories"
                    android:textColor="?attr/storyColorNormal"
                    android:textSize="@dimen/widget_config_feed_text_size" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/widget_config_best"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:fontFamily="@font/product_sans"
                    android:text="@string/widget_config_best_stories"
                    android:textColor="?attr/storyColorNormal"
                    android:textSize="@dimen/widget_config_feed_text_size" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/widget_config_ask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:fontFamily="@font/product_sans"
                    android:text="@string/widget_config_ask_hn"
                    android:textColor="?attr/storyColorNormal"
                    android:textSize="@dimen/widget_config_feed_text_size" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/widget_config_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:fontFamily="@font/product_sans"
                    android:text="@string/widget_config_show_hn"
                    android:textColor="?attr/storyColorNormal"
                    android:textSize="@dimen/widget_config_feed_text_size" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/widget_config_jobs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:fontFamily="@font/product_sans"
                    android:text="@string/widget_config_jobs"
                    android:textColor="?attr/storyColorNormal"
                    android:textSize="@dimen/widget_config_feed_text_size" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widget_config_count_label_top_margin"
                android:fontFamily="@font/product_sans"
                android:text="@string/widget_config_story_count_label"
                android:textColor="?attr/textColorDefault"
                android:textSize="@dimen/widget_config_label_text_size" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/widget_config_story_count_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widget_config_count_group_top_margin"
                app:checkedButton="@id/widget_config_count_20"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/widget_config_count_10"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkable="true"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="8"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/widget_config_count_20"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkable="true"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="16"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/widget_config_count_30"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkable="true"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="24"
                    android:textAllCaps="false" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget_config_button_container"
            android:paddingTop="@dimen/widget_config_confirm_top_margin"
            android:paddingLeft="@dimen/single_view_side_margin"
            android:paddingRight="@dimen/single_view_side_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/widget_config_confirm"
                android:fontFamily="@font/product_sans"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/widget_config_horizontal_margin"
                android:layout_marginRight="@dimen/widget_config_horizontal_margin"
                android:backgroundTint="?attr/colorSecondary"
                android:textColor="?attr/colorOnSecondary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/widget_config_confirm_height"
                android:layout_marginBottom="@dimen/widget_config_confirm_bottom_margin"
                android:elevation="@dimen/widget_config_confirm_elevation"
                android:stateListAnimator="@null"
                android:text="@string/widget_config_confirm"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
